--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 header {
     background-color: #4CAF50;
-    color: white;
+    color: Blue;
     padding: 20px;
     text-align: center;
 }
