--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ nav {
 }
 
 nav a {
-    color: white;
+    color: black;
     text-decoration: none;
     margin: 0 15px;
     font-size: 1.1rem;
@@ -48,7 +48,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #45a049;
+    background-color: black;
     text-decoration: none;
 }
 
@@ -75,7 +75,7 @@ main img:hover {
 /* Footer */
 footer {
     background-color: #333;
-    color: white;
+    color: black;
     text-align: center;
     padding: 15px;
     position: relative;
