--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ main img:hover {
 /* Footer */
 footer {
     background-color: #333;
-    color: black;
+    color: red;
     text-align: center;
     padding: 15px;
     position: relative;
