--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    color: #333;
-    background-color: #f9f9f9;
+    color: ff5733;
+    background-color: 403938;
     line-height: 1.6;
     padding: 0;
     margin: 0;
