--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Arial', Fantasy;
     color: ff5733;
     background-color: 403938;
     line-height: 1.6;
